# fV-SRN

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile-library-server.sh  setup.py
applications/: env.txt
applications/common/: __init__.py  create_stub.py  mathparser.py  priors.py  raytracing.py  utils.py  vis_gui.py
applications/config-files/: LuBerger-Jet-v2-mc.json  LuBerger-Jet-v3-shaded.json  Miranda-v1-dvr.json  RichtmyerMeshkov-ensemble-v3.json  RichtmyerMeshkov-t20-v1-dvr.json  RichtmyerMeshkov-t60-v1-dvr.json  ejecta-ensemble-v6.json  ejecta1024-v7-shaded.json  ejecta70-v6-dvr.json  implicit-Barth.json  implicit-Blobby.json  implicit-CrossCap.json  implicit-MarschnerLobb.json  implicit-MarschnerLobb2.json  implicit-PuffyCube-v1-iso.json  implicit-PuffyCube-v2-GaussianCurvature.json  implicit-PuffyCube-v2-dvr.json  implicit-PuffyCube-v3-dvr.json  plume100-v1-dvr.json  plume100-v2-dvr.json  plumeEnsemble-v0-dvr.json  plumeEnsemble-v1-dvr.json  plumeEnsemble-v2-dvr.json  skull-v5-dvr.json  skull-v6-dvr.json
applications/tests/: test_pytorch_functions.py
applications/volnet/: collect_possible_layers.py  eval_ActivationFunctions.py  eval_CompressionExtended.py  eval_CompressionTeaser.py  eval_CurvatureNetworks2.py  eval_Fourier.py  eval_Fourier_Grid.py  eval_GradientNetworks1_v2.py  eval_GradientNetworks2.py  eval_Importance.py  eval_ImportanceGrid.py  eval_NetworkConfigsGrid.py  eval_ScreenVsWorld.py  eval_ScreenVsWorld_Grid.py  eval_ScreenVsWorld_GridNeRF.py  eval_TimeVolumetricFeatures.py  eval_TimeVolumetricFeatures2.py  eval_TimeVolumetricFeatures_plotPaper.py  eval_VolumetricFeatures.py  eval_VolumetricFeatures_GridEncoding.py  eval_network_configs.py  eval_world_DensityVsColor.py  eval_world_DensityVsColorGrid.py  eval_world_DensityVsColorGrid_NoImportance.py  eval_world_DensityVsColorGrid_WithResampling.py  evaluation.py  export_volnet.py  inference.py  input_data.py  lossnet.py  network.py  optimizer.py  raytracing.py  sampling.py  test_raytracing.py  train_ensemble_generalization.py  train_volnet.py  training_data.py  vis_volnet.py
applications/volumes/: Ejecta256-ensemble.json  Readme.md  RichtmyerMeshkov-ensemble.json  ScalarFlow-ensemble.json
applications/volumes/RichtmyerMeshkov/: ppm-t0020.cvol
applications/volumes/ScalarFlow/: ConvertToCvol.py
bindings/: CMakeLists.txt  bindings.cpp
cli/: CMakeLists.txt  cli.cpp
compression/: CMakeLists.txt
compression/include/: compression.h  memtrace_api.h
compression/include/cudaCompress/: BitStream.h  CompressVolume.h  Encode.h  EncodeCommon.h  Instance.h  Timing.h  global.h
compression/include/cudaCompress/util/: Bits.h  CudaTimer.h  DWT.h  Quantize.h  YCoCg.h
compression/include/tthresh/: compress.h  decompress.h
compression/src/: compression.cpp  compression_cu.cu  memtrace.cpp  memtrace.h
compression/src/cudaCompress/: BitStreamGPU.cuh  CompressVolume.cpp  Encode.cpp  Histogram.cu  Histogram.h  HistogramKernels.cui  Huffman.cu  Huffman.h  HuffmanDesign.h  HuffmanKernels.cui  HuffmanTable.cu  HuffmanTable.h  Instance.cpp  InstanceImpl.cpp  InstanceImpl.h  PackInc.cu  PackInc.h  RunLength.cu  RunLength.h  RunLengthKernels.cui  Timing.cpp  cudaUtil.h  util.h
compression/src/cudaCompress/profiler/: profiler.cpp  profiler.hpp  profilerlogwriter.cpp  profilerlogwriter.hpp  profilerstreamwriter.cpp  profilerstreamwriter.hpp
compression/src/cudaCompress/reduce/: reduce_app.cui  reduce_globals.h  reduce_kernel.cui  reduce_plan.cpp  reduce_plan.h
compression/src/cudaCompress/scan/: license.txt  scan_app.cui  scan_cta.cui  scan_globals.h  scan_kernel.cui  scan_plan.cpp  scan_plan.h  vector_kernel.cui
compression/src/cudaCompress/tools/: Functor.h  Operator.h
compression/src/cudaCompress/util/: Bits.cu  CudaTimer.cpp  DWTCommon.cuh  DWTFloat.cu  DWTFloat2DLowpassKernels.cui  DWTFloatFilters.cuh  DWTFloatFromSymbolsKernels.cui  DWTFloatKernels.cui  DWTInt.cu  DWTInt2DLowpassKernels.cui  DWTIntKernels.cui  Quantize.cu  Quantize.cuh  QuantizeKernels.cui  YCoCg.cu
compression/src/tthresh/: Slice.hpp  compress.cpp  decode.hpp  decompress.cpp  encode.hpp  io.hpp  tucker.hpp  utils.hpp
compression/test/: main.cpp  rawfile.cpp  rawfile.h  test_memtrace.cpp
gui/: CMakeLists.txt  main.cpp  quad_drawer.h  visualizer.cpp  visualizer.h  visualizer_commons.h  visualizer_kernels.h  visualizer_kernels_cuda.cu
imgui/: CMakeLists.txt  imgui.h  imgui_widgets.cpp
renderer/: CMakeLists.txt  background_worker.h  blending.cpp  blending.h  brdf.cpp  brdf.h  camera.cpp  camera.h  commons.h  helper_math.cuh  helper_matrixmath.cuh  iimage_evaluator.cpp  iimage_evaluator.h  iimage_evaluator_cuda.cu  image_evaluator_simple.cpp  image_evaluator_simple.h  imodule.h  inpainting.cu  inpainting.h  irasterization.cpp  irasterization.h  json_utils.h  kernel_loader.cpp  kernel_loader.h  lru_cache.h  module_registry.cpp  module_registry.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_framebuffer_cuda.cu  opengl_mesh.cpp  opengl_mesh.h  opengl_oit.cpp  opengl_oit.h  opengl_shader.cpp  opengl_shader.h  opengl_utils.cpp  opengl_utils.h  parameter.h  particle_integration.cpp  (+76 more)
renderer/shaders/: OITIsoBlending.fs  OITIsoRendering.fs  Particles.fs  Particles.gs  Particles.vs  PassThrough.vs  ScreenQuad.vs  ShowNormals.fs  ShowUVs.fs  ShowUVs.vs  SimpleDiffuse.fs  VolumeImplicit.json
unittests/: CMakeLists.txt  check_adjoint.h  main.cpp  testEnsemble.cpp  testNeuralTexture.cpp  testPhaseFunction.cpp  testSRN.cpp  testSRNKernel.cu  testVolumeInterpolation.cpp  test_utils.h
